--- a/ldms/scripts/ldms_local_inspxe.sh.in
+++ b/ldms/scripts/ldms_local_inspxe.sh.in
@@ -5,6 +5,9 @@
 # NOTE: change ports, intervals if you like
 DESTDIR=
 allowroot=0
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
 BUILDDIR=@prefix@
 # Manually redefine portbase to avoid collisions.
 # Base should be above the maximum in :
@@ -40,10 +43,10 @@ export LDMSD_SOCKPATH=${TESTDIR}/run
 mkdir -p $STOREDIR $SOCKDIR $LOGDIR $LDMSD_SOCKPATH
 echo "logs and data stored under $TESTDIR"
 ILIB=/projects/global/x86_64/compilers/intel/intel-compxe-2013_sp1.3.174/composer_xe_2013_sp1.3.174/tbb/lib/intel64/gcc4.4:/opt/openmpi-1.6-intel/lib:/projects/tlcc2/x86_64/libraries/vtune/vtune_amplifier_xe_2013u13/lib64:/projects/global/x86_64/compilers/intel/intel-compxe-2013_sp1.3.174/lib/intel64
-export LD_LIBRARY_PATH=$ILIB:${BUILDDIR}/lib:
-export LDMS_XPRT_LIBPATH=${BUILDDIR}/lib
+export LD_LIBRARY_PATH=$ILIB:${BUILDDIR}/lib:@libdir@:@pkglibdir@:@libeventpath@:$LD_LIBRARY_PATH
+export LDMS_XPRT_LIBPATH=@pkglibdir@
 export PATH=${BUILDDIR}/sbin:$PATH
-export LDMSD_PLUGIN_LIBPATH=${BUILDDIR}/lib
+export LDMSD_PLUGIN_LIBPATH=@pkglibdir@
 
 # whack the daemons we own
 pkill ldmsd
