--- a/ldms/src/sampler/hadoop/Makefile.am
+++ b/ldms/src/sampler/hadoop/Makefile.am
@@ -1,4 +1,4 @@
-lib_LTLIBRARIES =
+pkglib_LTLIBRARIES =
 
 CORE = ../../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
@@ -7,7 +7,7 @@ AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 #hadoop sampler core
 libhadoop_sampler_la_SOURCES = sampler_hadoop.c sampler_hadoop.h
 libhadoop_sampler_la_LIBADD = $(CORE)/libldms.la -lovis_util -lrt -lcoll
-lib_LTLIBRARIES += libhadoop_sampler.la
+pkglib_LTLIBRARIES += libhadoop_sampler.la
 
 COMMON_ADD = $(CORE)/libldms.la -lovis_util -lrt \
 		libhadoop_sampler.la
@@ -15,29 +15,29 @@ COMMON_ADD = $(CORE)/libldms.la -lovis_util -lrt \
 #hadoop_namenode
 libhadoop_namenode_la_SOURCES = hadoop_namenode.c
 libhadoop_namenode_la_LIBADD = $(COMMON_ADD)
-lib_LTLIBRARIES += libhadoop_namenode.la
+pkglib_LTLIBRARIES += libhadoop_namenode.la
 
 #hadoop_datanode
 libhadoop_datanode_la_SOURCES = hadoop_datanode.c
 libhadoop_datanode_la_LIBADD = $(COMMON_ADD)
-lib_LTLIBRARIES += libhadoop_datanode.la
+pkglib_LTLIBRARIES += libhadoop_datanode.la
 
 #hadoop_jobtracker
 libhadoop_jobtracker_la_SOURCES = hadoop_jobtracker.c
 libhadoop_jobtracker_la_LIBADD = $(COMMON_ADD)
-lib_LTLIBRARIES += libhadoop_jobtracker.la
+pkglib_LTLIBRARIES += libhadoop_jobtracker.la
 
 #hadoop_tasktracker
 libhadoop_tasktracker_la_SOURCES = hadoop_tasktracker.c
 libhadoop_tasktracker_la_LIBADD = $(COMMON_ADD)
-lib_LTLIBRARIES += libhadoop_tasktracker.la
+pkglib_LTLIBRARIES += libhadoop_tasktracker.la
 
 #hadoop_maptask
 libhadoop_maptask_la_SOURCES = hadoop_maptask.c
 libhadoop_maptask_la_LIBADD = $(COMMON_ADD)
-lib_LTLIBRARIES += libhadoop_maptask.la
+pkglib_LTLIBRARIES += libhadoop_maptask.la
 
 #hadoop_reducetask
 libhadoop_reducetask_la_SOURCES = hadoop_reducetask.c
 libhadoop_reducetask_la_LIBADD = $(COMMON_ADD)
-lib_LTLIBRARIES += libhadoop_reducetask.la
+pkglib_LTLIBRARIES += libhadoop_reducetask.la
