--- a/ldms/scripts/envldms.sh.in
+++ b/ldms/scripts/envldms.sh.in
@@ -1,9 +1,12 @@
 #!/bin/bash
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
 BUILDDIR=@prefix@
 export PATH=${BUILDDIR}/sbin:$PATH
-export LD_LIBRARY_PATH=${BUILDDIR}/lib:@libeventpath@:$LD_LIBRARY_PATH
-export LDMS_XPRT_LIBPATH=${BUILDDIR}/lib
-export LDMSD_PLUGIN_LIBPATH=${BUILDDIR}/lib
+export LD_LIBRARY_PATH=@libdir@:@pkglibdir@:@libeventpath@:$LD_LIBRARY_PATH
+export LDMS_XPRT_LIBPATH=@pkglibdir@
+export LDMSD_PLUGIN_LIBPATH=@pkglibdir@
 
 set -x
 TESTDIR=/tmp/$USER/ldmstest/$$
