--- a/lib/src/zap/Makefile.am
+++ b/lib/src/zap/Makefile.am
@@ -12,6 +12,7 @@ if ENABLE_ZAPTEST
 SUBDIRS += test
 endif
 
+AM_CPPFLAGS = -DPLUGINDIR='"$(pkglibdir)"'
 libzap_la_SOURCES = zap.c zap_priv.h
 libzap_la_LIBADD = -ldl
 libzapincludedir = $(includedir)/zap
