RC1.2: comment out options and build of store_(mysql/mysqlbulk/sos) and sampler sedc.c

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -46,7 +46,7 @@ OPTION_DEFAULT_ENABLE([sock], [ENABLE_SOCK])
 
 dnl Options for store
 OPTION_DEFAULT_ENABLE([store], [ENABLE_STORE])
-OPTION_DEFAULT_DISABLE([mysql], [ENABLE_MYSQL])
+dnl OPTION_DEFAULT_DISABLE([mysql], [ENABLE_MYSQL])
 OPTION_DEFAULT_DISABLE([mysqlbulk], [ENABLE_MYSQLBULK])
 OPTION_DEFAULT_ENABLE([flatfile], [ENABLE_FLATFILE])
 OPTION_DEFAULT_ENABLE([csv], [ENABLE_CSV])
@@ -62,7 +62,7 @@ OPTION_DEFAULT_ENABLE([procnetdev], [ENABLE_PROCNETDEV])
 OPTION_DEFAULT_ENABLE([procnfs], [ENABLE_PROCNFS])
 OPTION_DEFAULT_ENABLE([procsensors], [ENABLE_PROCSENSORS])
 OPTION_DEFAULT_ENABLE([procstatutil], [ENABLE_PROCSTATUTIL])
-OPTION_DEFAULT_DISABLE([sedc], [ENABLE_SEDC])
+dnl OPTION_DEFAULT_DISABLE([sedc], [ENABLE_SEDC])
 OPTION_DEFAULT_ENABLE([sysclassib], [ENABLE_SYSCLASSIB])
 OPTION_DEFAULT_ENABLE([vmstat], [ENABLE_VMSTAT])
 OPTION_DEFAULT_ENABLE([procdiskstats], [ENABLE_PROCDISKSTATS])
@@ -100,14 +100,14 @@ dnl This got defined here for LIBEVENT_ENABLE
 OPTION_DEFAULT_ENABLE([libevent], [ENABLE_LIBEVENT])
 OPTION_WITH([libevent], [LIBEVENT])
 
-if test -z "$ENABLE_MYSQL_TRUE"
-then
-OPTION_WITH_MYSQL dnl MYSQL is special.
-fi
-if test -z "$ENABLE_GLIB_TRUE"
-then
-PKG_CHECK_MODULES([GLIB20], [glib-2.0])
-fi
+dnl if test -z "$ENABLE_MYSQL_TRUE"
+dnl then
+dnl OPTION_WITH_MYSQL dnl MYSQL is special.
+dnl fi
+dnl if test -z "$ENABLE_GLIB_TRUE"
+dnl then
+dnl PKG_CHECK_MODULES([GLIB20], [glib-2.0])
+dnl fi
 
 dnl Check for libevent
 OPTION_WITH_EVENT
