--- a/packaging/ovis-base.spec.in
+++ b/packaging/ovis-base.spec.in
@@ -21,7 +21,7 @@ Requires: rpm >= 4.8.0
 BuildRequires: doxygen openssl-devel libibverbs-devel librdmacm-devel
 Url: http://ovis.ca.sandia.gov/
 
-Prefix: /opt/ovis
+Prefix: /usr
 
 
 %description
@@ -30,23 +30,25 @@ Configured with @ac_configure_args@.
 * ldmsd: the LDMS daemon, which can run as sampler or aggregator (or both).
 * ldms_ls: the tool to list metric information of an ldmsd.
 * ldmsctl: the tool to control an ldmsd.
+* libevent2 installed privately to ldms plugin directory.
 
 %prep
 %setup -q
 
 %build
 echo bTMPPATH %{_tmppath}
+rm -rf $RPM_BUILD_ROOT
 echo bBUILDROOT $RPM_BUILD_ROOT
-%configure @ac_configure_args@ --disable-sos
+%configure @ac_configure_args@ LIBEVENT_BUILD=1 --disable-sos
 make
 
 %install
 echo TMPPATH %{_tmppath}
 echo BUILDROOT $RPM_BUILD_ROOT
-rm -rf $RPM_BUILD_ROOT
 make DESTDIR=${RPM_BUILD_ROOT} install
 # remove unpackaged files from the buildroot
 rm -f $RPM_BUILD_ROOT%{_libdir}/*.la
+rm -f $RPM_BUILD_ROOT%{_libdir}/ovis-ldms/lib/*.la
 
 %clean
 #rm -rf $RPM_BUILD_ROOT
@@ -82,8 +84,9 @@ Requires: %{name}-devel = %{version}-%{release}
 Doxygen files for ldms-all package.
 %files doc
 %defattr(-,root,root)
+%{_mandir}/*/*
 %{_datadir}/doc/ldms-all-%{version}
 %docdir %{_defaultdocdir}
 %changelog
-* Wed Jul 9 2014 Ben Allan <baallan@sandia.gov> 2.1.0-1
-all-in-one packaging
+* Mon Sep 15 2014 Ben Allan <baallan@sandia.gov> 2.2.0-1
+all-in-one packaging w/libevent
