Bug: spurious dependence of doc on devel rpm removed.

--- a/packaging/ovis-base.spec.in
+++ b/packaging/ovis-base.spec.in
@@ -79,7 +79,7 @@ package.
 %package doc
 Summary: Documentation files for %{name}
 Group: %{ldms_all}
-Requires: %{name}-devel = %{version}-%{release}
+## Requires: %{name}-devel = %{version}-%{release}
 %description doc
 Doxygen files for ldms-all package.
 %files doc
