bug: bad ldd path due to missing -i to sed.

--- a/packaging/ovis-base.spec.in
+++ b/packaging/ovis-base.spec.in
@@ -51,7 +51,7 @@ rm -f $RPM_BUILD_ROOT%{_libdir}/*.la
 rm -f $RPM_BUILD_ROOT%{_libdir}/ovis-ldms/lib/*.la
 
 %clean
-#rm -rf $RPM_BUILD_ROOT
+rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root)
