--- a/sos/configure.ac
+++ b/sos/configure.ac
@@ -8,6 +8,7 @@ AC_CONFIG_SRCDIR([src/sos.h])
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE()
+AM_SILENT_RULES([yes])
 AC_PROG_LIBTOOL
 AC_LIB_RPATH
 
