--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,10 @@
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST=libevent-2.0.21-stable.tar.gz m4/Ovis-top.m4
+EXTRA_DIST= \
+libevent-2.0.21-stable.tar.gz \
+m4/Ovis-top.m4 \
+SHA.txt \
+TAG.txt
 
 ## if ENABLE_SOS
 ## SUBDIRS= lib sos ldms
