bug: doc files need version for install.

--- a/util/sample_init_scripts/Makefile.am
+++ b/util/sample_init_scripts/Makefile.am
@@ -1,6 +1,6 @@
 
-docdir = $(datadir)/doc/@PACKAGE@/sample_init_scripts
-doc_DATA = \
+docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts
+dist_doc_DATA = \
 ldmsd.conf.example \
 ldmsd.example \
 README
