--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -30,6 +30,7 @@ banned:
 	bash $(srcdir)/scripts/ldms_ban.sh.in $(srcdir)/../
 
 if ENABLE_DOC
+
 doc:
 	doxygen Doxyfile
 	@(errcnt=`wc -l ldms.doxygen.log|sed -e s'% .*%%g'`; echo doxygen errors $$errcnt; if [ "$$errcnt" -ge 10 ]; then echo "WOW WE NEED TO CLEAN UP THE COMMENTS!"; fi)
@@ -38,17 +39,32 @@ doxygen doxygen/html:
 	doxygen ./Doxyfile
 	@(errcnt=`wc -l ldms.doxygen.log|sed -e s'% .*%%g'`; echo doxygen errors $$errcnt; if [ "$$errcnt" -ge 10 ]; then echo "WOW WE NEED TO CLEAN UP THE COMMENTS!"; fi)
 
-install-data-local: doxygen
+install-doxygen:
 	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/html/search
-	for f in AUTHORS README COPYING ChangeLog ; do \
-		$(INSTALL_DATA) ${srcdir}/$$f $(DESTDIR)$(docdir)$(OPV); \
-	done
 	for f in doxygen/html/* ; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html; \
 	done
 	for f in doxygen/html/search/*; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html/search; \
 	done
+
+else
+
+doc:
+	@echo "bypassing doxygen build"
+
+doxygen doxygen/html:
+	@echo "no html doc in this version"
+
+install-doxygen:
+	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)
+	@echo "no html doc in this version"
+
 endif
+
+install-data-local: install-doxygen
+	for f in AUTHORS README COPYING ChangeLog ; do \
+		$(INSTALL_DATA) ${srcdir}/$$f $(DESTDIR)$(docdir)$(OPV); \
+	done
 
 clean-local: rpm-clean
