sos: sos_generate
sos_generate is a sos utility to help user create SOS easily. SOS
class definition is defined in a simple text file, and the data is fed
from standard input.

Change-Id: I0a6d7c0e384325ec2e9f4e5465648e5ffc2fcafa

--- a/sos/src/Makefile.am
+++ b/sos/src/Makefile.am
@@ -5,6 +5,7 @@ sbin_PROGRAMS = \
 	sos_verify \
 	sos_archive \
 	sos_combine \
+	sos_generate \
 	sos_restore \
 	sos_reinit \
 	ods_verify \
@@ -141,6 +142,13 @@ sos_archive_LDADD = \
 sos_combine_SOURCES = sos_combine.c
 sos_combine_CFLAGS = $(INCLUDES)
 sos_combine_LDADD = \
+		   libsos.la \
+		   libods.la \
+		   libobjidx.la
+
+sos_generate_SOURCES = sos_generate.c
+sos_generate_CFLAGS = $(INCLUDES)
+sos_generate_LDADD = \
 		   libsos.la \
 		   libods.la \
 		   libobjidx.la
