helper-scripts: rename the scripts
 - Replace the hyphen '-' with the underscore '_'
 - In ldmsd_sampler_services, add a line to tell users that the script is
   connecting to hosts

Change-Id: I537343618e6bee1ce18b4befec83ad968442ae94

--- a/helper-scripts/scripts/Makefile.am
+++ b/helper-scripts/scripts/Makefile.am
@@ -1,2 +1,2 @@
-bin_SCRIPTS = ldmsd-sampler-services ovis-head-services ovis-services
+bin_SCRIPTS = ldmsd_sampler_services ovis_head_services ovis_services
 CLEANFILES = $(bin_SCRIPTS)
