ovis conf.: oconverter_sqlite program, oconf_sqlite package and unittest
 * The oconverter_sqlite program is to convert an OVIS conf. sqlite database to
textfile formats.

 * The oconf_sqlite package is a python package to work with the OVIS configuration
sqlite database. The package contains
   - oconvert_sqlite: the module used by the oconverter_sqlite program
   - osqlite_util: the module for querying information from the database. It also
   provides basic utility functions.
   - osqlite_classes: it provides classes to work with the database

 * The provided unittest are for the oconvert_sqlite and osqlite_util modules.

Change-Id: I789db4bb26fef477a1ceaf3da3d25cc3b66d5bed

--- a/ocm/configure.ac
+++ b/ocm/configure.ac
@@ -15,6 +15,9 @@ AC_CHECK_SIZEOF(long)
 
 AM_PROG_LIBTOOL
 
+dnl check for python interpreter
+AM_PATH_PYTHON([2.6])
+
 dnl Needed for per-product flags
 AM_PROG_CC_C_O
 
@@ -69,5 +72,7 @@ AC_CONFIG_FILES([Makefile
 		etc/init.d/ocmd
 		etc/logrotate.d/Makefile
 ])
+
+AC_CONFIG_SUBDIRS([src/parsers/oparser_sqlite/python])
 
 AC_OUTPUT
