--- a/ocm/src/parsers/oparser_sqlite/Makefile.am
+++ b/ocm/src/parsers/oparser_sqlite/Makefile.am
@@ -8,3 +8,5 @@ oparser_sqlite_SOURCES = oparser_run.c template_parser.c \
 				model_event_parser.c oparser_util.c \
 				oquery_sqlite.c cable_parser.c
 oparser_sqlite_LDADD = -lsqlite3 -lcoll
+
+SUBDIRS = python
