--- a/baler/Makefile.am
+++ b/baler/Makefile.am
@@ -4,5 +4,9 @@ if ENABLE_ETC
 SUBDIRS += etc
 endif
 
+if ENABLE_DICT
+SUBDIRS += dict
+endif
+
 PEDIGREE = $(DESTDIR)/$(bindir)/baler-pedigree
 include $(top_srcdir)/../automake/pedigree.am
