ovis: Fix logrotate to support Centos
Change-Id: I4e0c1247c3ce9494a3799359631dead985e4da08

--- a/lib/etc/ovis/ovis-logrotate.in
+++ b/lib/etc/ovis/ovis-logrotate.in
@@ -1,17 +1,28 @@
 #!/bin/sh
 
+clean_logrotate_status() {
+	local F=$1
+	local C=$F.clean
+	test -e $F || touch $F
+	head -1 $F > $C
+	sed 's/"//g' $F | while read logfile date
+	do
+	    [ -e "$logfile" ] && echo "\"$logfile\" $date"
+	done >> $C
+	mv $C $F
+}
+
 . /etc/profile.d/set-ovis-variables.sh
 
 current=`pwd`
 # Clean non existent log file entries from status file
-cd /var/lib/logrotate
-test -e status || touch status
-head -1 status > status.clean
-sed 's/"//g' status | while read logfile date
-do
-    [ -e "$logfile" ] && echo "\"$logfile\" $date"
-done >> status.clean
-mv status.clean status
+cd /var/lib
+if [ -d logrotate ]; then
+	cd logrotate
+	clean_logrotate_status "status"
+else
+	clean_logrotate_status "logrotate.status"
+fi
 
 test -x /usr/sbin/logrotate || exit 0
 cd $OVIS_LOG
