--- a/lib/src/zap/rdma/Makefile.am
+++ b/lib/src/zap/rdma/Makefile.am
@@ -3,5 +3,5 @@ lib_LTLIBRARIES = libzap_rdma.la
 AM_CFLAGS = -I$(srcdir)/../
 
 libzap_rdma_la_SOURCES = zap_rdma.c zap_rdma.h
-libzap_rdma_la_LIBADD = -libverbs -lrdmacm ../libzap.la
+libzap_rdma_la_LIBADD = -libverbs -lrdmacm -lpthread ../libzap.la
 
