ldms: init script - stop() - fix.
ldmsd (especially aggregator) can take a little while in its cleanup()
path. Thus, the stop() function in init script mistakenly infer that
the program could not exit and reports service stop failed. This
changeset fix this bug.

Change-Id: Ifb34fe51a58dc7bc68ab80ac1684349f6ed38601

--- a/ldms/etc/init.d/ldmsd_sampler.in
+++ b/ldms/etc/init.d/ldmsd_sampler.in
@@ -122,9 +122,16 @@ stop() {
 		echo "Cannot obtain ldmsd_sampler pid ..."
 		echo_failure
 		echo
+		return
 	else
 		kill $pid
 	fi
+
+	COUNT=$((4*10))
+	while [ -d /proc/$pid ] && [ $COUNT -gt 0 ]; do
+		sleep 0.25
+		COUNT=$((COUNT-1))
+	done
 
 	if ps -p $pid >/dev/null 2>&1 ; then
 		echo_failure
